[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "env-typed"
version = "0.1.0"
description = "Minimal, type-safe environment variable validation for Python. "
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = ["typing_extensions>=4.0"]

[project.urls]
Homepage = "https://github.com/p2ktv/env-typed"
Repository = "https://github.com/p2ktv/env-typed"

[tool.setuptools.packages.find]
where = ["."]
include = ["envsafe*"]
