[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "envly"
version = "0.1.3"
description = "Minimal, type-safe environment variable validation for Python."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = ["typing_extensions>=4.0"]

[project.urls]
Homepage = "https://github.com/p2ktv/envly"
Repository = "https://github.com/p2ktv/envly"

[tool.setuptools.packages.find]
where = ["."]
include = ["envly*"]
